@@ -25,6 +25,9 @@
 11. Add option to prevent system from suspending whilst playing (Linux only).
 12. If playqueue is cleared when dynamizer is running, then also stop
     dynamizer.
+13. Create a new SizeGrip class, so that we can force the size-grip on the main
+    window to have the same height as toolbuttons - this makes it align to the
+    bottom.
 
 1.1.3
 -----
